feat: collection import summaries (#4489)
Co-authored-by: jamesgeorge007 <25279263+jamesgeorge007@users.noreply.github.com>

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -502,8 +502,11 @@
     "from_file": "Import from File",
     "from_gist": "Import from Gist",
     "from_gist_description": "Import from Gist URL",
+    "from_gist_import_summary": "All hoppscotch features are imported.",
+    "from_hoppscotch_importer_summary": "All hoppscotch features are imported.",
     "from_insomnia": "Import from Insomnia",
     "from_insomnia_description": "Import from Insomnia collection",
+    "from_insomnia_import_summary": "Collections and Requests will be imported.",
     "from_json": "Import from Hoppscotch",
     "from_json_description": "Import from Hoppscotch collection file",
     "from_my_collections": "Import from Personal Collections",
@@ -512,12 +515,15 @@
     "from_all_collections_description": "Import any collection from Another Workspace to the current workspace",
     "from_openapi": "Import from OpenAPI",
     "from_openapi_description": "Import from OpenAPI specification file (YML/JSON)",
+    "from_openapi_import_summary": "Collections ( will be created from tags ), Requests and response examples will be imported.",
     "from_postman": "Import from Postman",
     "from_postman_description": "Import from Postman collection",
+    "from_postman_import_summary": "Collections, Requests and response examples will be imported.",
     "from_url": "Import from URL",
     "gist_url": "Enter Gist URL",
     "from_har": "Import from HAR",
     "from_har_description": "Import from HAR file",
+    "from_har_import_summary": "Requests will be imported to a default collection.",
     "gql_collections_from_gist_description": "Import GraphQL Collections From Gist",
     "hoppscotch_environment": "Hoppscotch Environment",
     "hoppscotch_environment_description": "Import Hoppscotch Environment JSON file",
@@ -532,7 +538,13 @@
     "title": "Import",
     "file_size_limit_exceeded_warning_multiple_files": "Chosen files exceed the recommended limit of {sizeLimit}MB. Only the first {files} selected will be imported",
     "file_size_limit_exceeded_warning_single_file": "The currently chosen file exceeds the recommended limit of {sizeLimit}MB. Please select another file.",
-    "success": "Successfully imported"
+    "success": "Successfully imported",
+    "import_summary_collections_title": "Collections",
+    "import_summary_requests_title": "Requests",
+    "import_summary_responses_title": "Responses",
+    "import_summary_pre_request_scripts_title": "Pre-request scripts",
+    "import_summary_test_scripts_title": "Test scripts",
+    "import_summary_not_supported_by_hoppscotch_import": "We do not support importing {featureLabel} from this source right now."
   },
   "inspections": {
     "description": "Inspect possible errors",
