--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -574,6 +574,9 @@
       "extension_unknown_origin": "Make sure you've added the API endpoint's origin to the Hoppscotch Browser Extension list.",
       "extention_enable_action": "Enable Browser Extension",
       "extention_not_enabled": "Extension not enabled."
+    },
+    "requestBody": {
+      "agent_doesnt_support_binary_body": "Sending binary data via agent is not supported yet"
     }
   },
   "layout": {
