--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -574,6 +574,9 @@
       "extension_unknown_origin": "Make sure you've added the API endpoint's origin to the Hoppscotch Browser Extension list.",
       "extention_enable_action": "Enable Browser Extension",
       "extention_not_enabled": "Extension not enabled."
+    },
+    "requestBody": {
+      "agent_doesnt_support_binary_body": "Sending binary data via agent is not supported yet"
     }
   },
   "layout": {
@@ -666,7 +669,8 @@
     "content_type_titles": {
       "others": "Others",
       "structured": "Structured",
-      "text": "Text"
+      "text": "Text",
+      "binary": "Binary"
     },
     "show_content_type": "Show Content Type",
     "different_collection": "Cannot reorder requests from different collections",
