--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -576,7 +576,7 @@
       "extention_not_enabled": "Extension not enabled."
     },
     "requestBody": {
-      "agent_doesnt_support_binary_body": "Sending binary data via agent is not supported yet"
+      "active_interceptor_doesnt_support_binary_body": "Sending binary data via the current interceptor is not supported yet."
     }
   },
   "layout": {
