--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1215,6 +1215,7 @@
     "include_active_environment": "Include active environment:",
     "cli": "CLI",
     "delay": "Delay",
+    "negative_delay": "Delay cannot be negative",
     "ui": "Runner",
     "running_collection": "Running collection",
     "run_config": "Run Configuration",
@@ -1228,7 +1229,9 @@
     "cli_command_generation_description_cloud": "Copy the below command and run it from the CLI. Please specify a personal access token.",
     "cli_command_generation_description_sh": "Copy the below command and run it from the CLI. Please specify a personal access token and verify the generated SH instance server URL.",
     "cli_command_generation_description_sh_with_server_url_placeholder": "Copy the below command and run it from the CLI. Please specify a personal access token and the SH instance server URL.",
-    "run_collection": "Run collection"
+    "run_collection": "Run collection",
+    "no_passed_tests": "No tests passed",
+    "no_failed_tests": "No tests failed"
   },
   "ai_experiments": {
     "generate_request_name": "Generate Request Name Using AI",
