feat(kernel): `network` - native interceptor

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -819,6 +819,8 @@
     "general_description": " General settings used in the application",
     "interceptor": "Interceptor",
     "interceptor_description": "Middleware between application and APIs.",
+    "kernel_interceptor": "Kernel Interceptor",
+    "kernel_interceptor_description": "Middleware between application and APIs.",
     "language": "Language",
     "light_mode": "Light",
     "official_proxy_hosting": "Official Proxy is hosted by Hoppscotch.",
@@ -858,7 +860,30 @@
     "use_experimental_url_bar": "Use experimental URL bar with environment highlighting",
     "user": "User",
     "verified_email": "Verified email",
-    "verify_email": "Verify email"
+    "verify_email": "Verify email",
+    "validate_certificates": "Validate SSL/TLS Certificates",
+    "verify_host": "Verify Host",
+    "client_certificates": "Client Certificates",
+    "certificate_settings": "Certificate Settings",
+    "certificate": "Certificate",
+    "key": "Private Key",
+    "pfx_or_p12": "PFX/PKCS#12",
+    "password": "Password",
+    "select_file": "Select File",
+    "domain": "Domain",
+    "add_certificate": "Add Certificate",
+    "add_cert_file": "Add Certificate File",
+    "add_key_file": "Add Key File",
+    "add_pfx_file": "Add PFX File",
+    "global_defaults": "Global Defaults",
+    "add_domain_override": "Add Domain Override",
+    "domain_override": "Domain Override",
+    "manage_domains_overrides": "Manage Domains Overrides",
+    "add_domain": "Add Domain",
+    "remove_domain": "Remove Domain",
+    "ca_certificate": "CA Certificate",
+    "ca_certificates": "CA Certificates",
+    "proxy_capabilities": "Hoppscotch Native supports HTTP/HTTPS/SOCKS proxies with NTLM and Basic Auth support."
   },
   "shared_requests": {
     "button": "Button",
