--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -61,7 +61,12 @@
     "history_configs": {
       "description": "Disable or enable tracking history of sent requests from hoppscotch app",
       "title": "History Configurations",
-      "enable_history": "Enable History"
+      "enable_history": "Enable History",
+      "clear_history": "Clear existing history",
+      "clear_failure": "Failed to clear history!!",
+      "clear_success": "History cleared successfully.",
+      "toggle_failure": "Failed to toggle history!!",
+      "clear_confirm": "Are you sure you want to clear the all history?"
     },
     "reset": {
       "confirm_reset": "Hoppscotch server must restart to reflect the new changes. Confirm the reset of server configurations?",
