--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -66,7 +66,7 @@
       "clear_failure": "Failed to clear history!!",
       "clear_success": "History cleared successfully.",
       "toggle_failure": "Failed to toggle history!!",
-      "clear_confirm": "Are you sure you want to clear the all history?"
+      "clear_confirm": "Are you sure you want to clear all history?"
     },
     "reset": {
       "confirm_reset": "Hoppscotch server must restart to reflect the new changes. Confirm the reset of server configurations?",
