feat: persist env variables

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1223,6 +1223,7 @@
     "advanced_settings": "Advanced Settings",
     "stop_on_error": "Stop run if an error occurs",
     "persist_responses": "Persist responses",
+    "keep_variable_values": "Keep variable values",
     "collection_not_found": "Collection not found. May be deleted or moved.",
     "empty_collection": "Collection is empty. Add requests to run.",
     "no_response_persist": "The collection runner is presently configured not to persist responses. This setting prevents showing the response data. To modify this behavior, initiate a new run configuration.",
