added ai experiment dependencies

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -793,6 +793,11 @@
     "short_codes_description": "Short codes which were created by you.",
     "sidebar_on_left": "Sidebar on left",
     "ai_experiments": "AI Experiments",
+    "ai_request_naming_style": "Request Naming Style",
+    "ai_request_naming_style_descriptive_with_spaces": "DESCRIPTIVE_WITH_SPACES",
+    "ai_request_naming_style_camelcase": "camelCase",
+    "ai_request_naming_style_snake_case": "snake_case",
+    "ai_request_naming_style_pascalcase": "PascalCase",
     "sync": "Synchronise",
     "sync_collections": "Collections",
     "sync_description": "These settings are synced to cloud.",
