feat: collection runner refinements (#4609)
Co-authored-by: nivedin <nivedinp@gmail.com>
Co-authored-by: jamesgeorge007 <25279263+jamesgeorge007@users.noreply.github.com>

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -724,6 +724,7 @@
     "duplicate_name_error": "Same name response already exists",
     "filter_response_body": "Filter JSON response body (uses JSONPath syntax)",
     "headers": "Headers",
+    "request_headers": "Request Headers",
     "html": "HTML",
     "image": "Image",
     "json": "JSON",
@@ -1224,10 +1225,12 @@
     "advanced_settings": "Advanced Settings",
     "stop_on_error": "Stop run if an error occurs",
     "persist_responses": "Persist responses",
+    "keep_variable_values": "Keep variable values",
     "collection_not_found": "Collection not found. May be deleted or moved.",
     "empty_collection": "Collection is empty. Add requests to run.",
     "no_response_persist": "The collection runner is presently configured not to persist responses. This setting prevents showing the response data. To modify this behavior, initiate a new run configuration.",
     "select_request": "Select a request to see response and test results",
+    "response_body_lost_rerun": "Response body is lost. Run again the collection to get the response body.",
     "cli_command_generation_description_cloud": "Copy the below command and run it from the CLI. Please specify a personal access token.",
     "cli_command_generation_description_sh": "Copy the below command and run it from the CLI. Please specify a personal access token and verify the generated SH instance server URL.",
     "cli_command_generation_description_sh_with_server_url_placeholder": "Copy the below command and run it from the CLI. Please specify a personal access token and the SH instance server URL.",
