--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -794,10 +794,10 @@
     "sidebar_on_left": "Sidebar on left",
     "ai_experiments": "AI Experiments",
     "ai_request_naming_style": "Request Naming Style",
-    "ai_request_naming_style_descriptive_with_spaces": "DESCRIPTIVE_WITH_SPACES",
-    "ai_request_naming_style_camel_case": "camelCase",
-    "ai_request_naming_style_snake_case": "snake_case",
-    "ai_request_naming_style_pascal_case": "PascalCase",
+    "ai_request_naming_style_descriptive_with_spaces": "Descriptive With Spaces",
+    "ai_request_naming_style_camel_case": "Camel Case ( camelCase )",
+    "ai_request_naming_style_snake_case": "Snake Case ( snake_case )",
+    "ai_request_naming_style_pascal_case": "Pascal Case ( PascalCase )",
     "sync": "Synchronise",
     "sync_collections": "Collections",
     "sync_description": "These settings are synced to cloud.",
