refactor: move AI request naming style to settings (#4636)
Co-authored-by: jamesgeorge007 <25279263+jamesgeorge007@users.noreply.github.com>
Co-authored-by: amk-dev <akash.k.mohan98@gmail.com>

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -793,6 +793,11 @@
     "short_codes_description": "Short codes which were created by you.",
     "sidebar_on_left": "Sidebar on left",
     "ai_experiments": "AI Experiments",
+    "ai_request_naming_style": "Request Naming Style",
+    "ai_request_naming_style_descriptive_with_spaces": "Descriptive With Spaces",
+    "ai_request_naming_style_camel_case": "Camel Case ( camelCase )",
+    "ai_request_naming_style_snake_case": "Snake Case ( snake_case )",
+    "ai_request_naming_style_pascal_case": "Pascal Case ( PascalCase )",
     "sync": "Synchronise",
     "sync_collections": "Collections",
     "sync_description": "These settings are synced to cloud.",
