fix: explicit auto auth and docs on url auth

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -957,7 +957,8 @@
     "ca_certificate": "CA Certificate",
     "ca_certificates": "CA Certificates",
     "ca_certificates_support": "Hoppscotch supports .crt, .cer or .pem files containing one or more certificates.",
-    "proxy_capabilities": "Hoppscotch Native supports HTTP/HTTPS/SOCKS proxies with NTLM and Basic Auth support."
+    "proxy_capabilities": "Hoppscotch Agent and Desktop App supports HTTP/HTTPS/SOCKS proxies with NTLM and Basic Auth support.",
+    "proxy_auth": "You can also include username and password in the URL."
   },
   "shared_requests": {
     "button": "Button",
