--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -422,7 +422,7 @@
     "check_how_to_add_origin": "Check how you can add an origin",
     "curl_invalid_format": "cURL is not formatted properly",
     "danger_zone": "Danger zone",
-    "delete_account": "Your account is currently an owner in these workspaces:",
+    "delete_account": "Your account is currently the sole owner in these workspaces:",
     "delete_account_description": "You must either remove yourself, transfer ownership, or delete these workspaces before you can delete your account.",
     "delete_activity_log": "Failed to delete activity log",
     "delete_all_activity_logs": "Failed to delete all activity logs",
