feat: add english locale strings for collection search options

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -815,6 +815,12 @@
     "official_proxy_hosting": "Official Proxy is hosted by Hoppscotch.",
     "query_parameters_encoding": "Query Parameters Encoding",
     "query_parameters_encoding_description": "Configure encoding for query parameters in requests",
+    "collection_search_options": "Collection Search Options",
+    "collection_search_options_description": "Configure search in collections to filter according to title of requests vs url of requests",
+    "both_title_and_url": "Both Title and URL",
+    "collection_search_name_tooltip": "Search in collection by title of requests",
+    "collection_search_url_tooltip": "Search in collection by url of requests",
+    "collection_search_both_tooltip": "Search in collection by both title and url of requests",
     "profile": "Profile",
     "profile_description": "Update your profile details",
     "profile_email": "Email address",
