feat: add requests alphabetical sort to en.json

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -65,7 +65,8 @@
     "verify": "Verify",
     "yes": "Yes",
     "enable": "Enable",
-    "disable": "Disable"
+    "disable": "Disable",
+    "alphabetical-sort": "Alphabetical Sort"
   },
   "activity_logs": {
     "ACTIVITY_LOG_DELETE": "Activity log has been deleted",
