chore: minor UI update

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -637,6 +637,7 @@
     "enter_server_url": "Connect to a self-hosted instance",
     "already_connected": "You are already connected to this instance",
     "recent_connections": "Recent Connections",
+    "add_instance": "Add an instance",
     "add_new": "Add a new instance",
     "confirm_remove": "Confirm Removal",
     "remove_warning": "Are you sure you want to remove this instance?",
