feat: Agent registration UX flow updates (#4942)
Co-authored-by: curiouscorrelation <curiouscorrelation@gmail.com>
Co-authored-by: jamesgeorge007 <25279263+jamesgeorge007@users.noreply.github.com>

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -882,14 +882,15 @@
     "account_email_description": "Your primary email address.",
     "account_name_description": "This is your display name.",
     "additional": "Additional Settings",
-    "agent_not_running": "Hoppscotch Agent not detected - click `Retry` to check again.",
+    "agent_not_running": "Hoppscotch Agent not detected. Please check if the Agent is running.",
     "agent_not_running_short": "Check Agent's status.",
     "agent_running": "Hoppscotch Agent is live.",
     "agent_running_short": "Hoppscotch Agent is live.",
-    "agent_reset_registration": "Reset Registration",
+    "agent_discard_registration": "Discard Agent Registration",
     "agent_registered": "Agent Registered",
     "agent_registration_successful": "Agent Registered Successfully",
-    "agent_registration_fetch_failed": "Couldn't fetch Agent registration information",
+    "agent_registration_fetch_failed": "Couldn't fetch Agent registration information. Please re-register the Agent.",
+    "agent_registration_already_in_progress": "Agent registration is already in progress. Please complete or cancel the current registration and try again.",
     "auto_encode_mode": "Auto",
     "auto_encode_mode_tooltip": "Encode the parameters in the request only if some special characters are present",
     "background": "Background",
@@ -928,6 +929,7 @@
     "proxy_url": "Proxy URL",
     "proxy_use_toggle": "Use the proxy middleware to send requests",
     "read_the": "Read the",
+    "register_agent": "Register Agent",
     "reset_default": "Use Default Proxy",
     "short_codes": "Short codes",
     "short_codes_description": "Short codes which were created by you.",
