--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -156,7 +156,7 @@
     "we_use_cookies": "We use cookies",
     "updated_text": "Hoppscotch has been updated to v{version} 🎉",
     "whats_new": "What's new?",
-    "see_whats_new": "See what’s new",
+    "see_whats_new": "See what's new",
     "wiki": "Wiki",
     "collapse_sidebar": "Collapse Sidebar",
     "continue_to_dashboard": "Continue to Dashboard",
@@ -167,6 +167,7 @@
     "default": "default: {value}"
   },
   "auth": {
+    "account_deactivated": "Your account has been deactivated. Contact the admin to get access.",
     "account_exists": "Account exists with different credential - Login to link both accounts",
     "all_sign_in_options": "All sign in options",
     "continue_with_auth_provider": "Continue with {provider}",
@@ -656,7 +657,7 @@
       "add_environment": "Add to Environment",
       "add_environment_value": "Add value",
       "empty_value": "Environment value is empty for the variable '{variable}' ",
-      "not_found": "Environment variable “{environment}” not found."
+      "not_found": "Environment variable '{environment}' not found."
     },
     "header": {
       "cookie": "The browser doesn't allow Hoppscotch to set Cookie Headers. Please use Authorization Headers instead. However, our Hoppscotch Desktop App is live now and supports Cookies."
@@ -1234,6 +1235,7 @@
     "unsubscribed_failed": "Failed to unsubscribe from topic: {topic}",
     "unsubscribed_success": "Successfully unsubscribed from topic: {topic}",
     "waiting_send_request": "Waiting to send request",
+    "user_deactivated": "Your account is deactivated. Please contact admin to reactivate your account.",
     "add_user_failure": "Failed to add user to the workspace!!",
     "add_user_success": "User is now a member of the workspace!!",
     "admin_failure": "Failed to make user an admin!!",
