--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -17,14 +17,29 @@
     "open_navigation": "Open Navigation",
     "read_documentation": "Read Documentation"
   },
+  "auth": {
+    "email_auth": "Email Authentication",
+    "email_auth_description": "Enable or disable email-based authentication for your users.",
+    "email_auth_enabled": "Email authentication is enabled and ready to use.",
+    "email_auth_smtp_note": "To use email-based authentication, you need to enable and configure SMTP in the SMTP tab first.",
+    "enable_email_auth": "Enable Email Authentication",
+    "smtp_required": "SMTP must be enabled and configured to use email based authentication."
+  },
   "configs": {
     "auth_providers": {
+      "auth_provider_config": "Authentication Configurations",
+      "auth_provider_description": "Configure authentication providers for your Hoppscotch instance using OAuth, SSO, or email-based methods.",
       "callback_url": "CALLBACK URL",
       "client_id": "CLIENT ID",
       "client_secret": "CLIENT SECRET",
       "description": "Configure authentication providers for your server",
+      "email": "Email",
+      "github_enterprise": "Enable Github Enterprise",
+      "oauth": "OAuth",
+      "oauth_providers": "OAuth Providers",
       "provider_not_specified": "Please enable at least one authentication provider",
       "scope": "SCOPE",
+      "sso": "SSO",
       "tenant": "TENANT",
       "title": "Authentication Providers",
       "update_failure": "Failed to update authentication provider configurations!!"
@@ -83,6 +98,14 @@
       "title": "Server is restarting"
     },
     "save_changes": "Save Changes",
+    "tabs": {
+      "auth": "Authentication",
+      "activity": "Activity",
+      "smtp": "SMTP",
+      "tokens": "Tokens",
+      "miscellaneous": "Miscellaneous",
+      "reset": "Reset Configurations"
+    },
     "title": "Configurations",
     "update_failure": "Failed to update server configurations"
   },
